# LinkTo

./: .gitignore  CameraWebServer.ino  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tos/linkto/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  slam_native.cpp
app/src/main/java/com/example/linkto/: DataModels.kt  MainActivity.kt  MainViewModel.kt  NetworkModule.kt  PerceptionEngine.kt
app/src/main/java/com/example/linkto/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tos/linkto/: LoginActivity.kt  MainActivity.kt  StreamActivity.kt  VoiceManager.kt
app/src/main/java/com/tos/linkto/data/model/: UserAuth.kt
app/src/main/java/com/tos/linkto/data/network/: ApiService.kt  Client.kt
app/src/main/java/com/tos/linkto/data/repo/: AuthRepo.kt  SettingsRepo.kt
app/src/main/java/com/tos/linkto/ui/components/: StupidComponents.kt
app/src/main/java/com/tos/linkto/ui/screen/: Auth.kt  Home.kt  Link.kt  User.kt
app/src/main/java/com/tos/linkto/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tos/linkto/utils/slam/: SlamManager.kt
app/src/main/java/com/tos/linkto/utils/video/: FrameExtractor.kt  FrameRenderer.kt  VideoProcessingPipeline.kt
app/src/main/java/com/tos/linkto/utils/yolo/: Detection.kt  ModelConfig.kt  ModelManager.kt  YOLODetector.kt
app/src/main/java/com/tos/linkto/vm/: AuthVM.kt  AuthVMFactory.kt  VMFactory.kt
app/src/main/res/layout/: activity_main.xml  activity_stream.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tos/linkto/: ExampleUnitTest.kt
cloudserver/: .env  package-lock.json  package.json
cloudserver/src/: app.js
cloudserver/src/controllers/: authController.js
cloudserver/src/main/java/com/tos/cloudserver/: CloudServer.kt
cloudserver/src/middleware/: authMiddleware.js
cloudserver/src/models/: User.js
cloudserver/src/routes/: authRoutes.js
edgeserver/: .env  package-lock.json  package.json
edgeserver/src/: app.js
edgeserver/src/config/: config.js
edgeserver/src/controllers/: AgentController.js  HealthController.js
edgeserver/src/main/java/com/tos/edgeserver/: EdgeServer.kt
edgeserver/src/models/: DecisionPlan.js  PerceptionData.js
edgeserver/src/routes/: api.js
edgeserver/src/services/: AgentService.js  MockAgentService.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
